--- a/views/account.mustache
+++ b/views/account.mustache
@@ -24,7 +24,7 @@
 		<div class="dashboard-nav-inner">
 			<ul data-submenu-title="Account">
 				<li id="list-item-profile"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-settings"></i> Profile</a></li>
-				<li id="list-item-sites" class="active"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-envelope-open"></i> Sites</a></li>
+				<li id="list-item-sites"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-envelope-open"></i> Sites</a></li>
 			</ul>
 		</div>
 	</div>
@@ -36,7 +36,6 @@
 			<div class="col-lg-9 col-md-9">
 				<div class="dashboard-list-box margin-top-0">
 					<h4>Manage Your Sites</h4>
-
 					<ul>
             {{#sites}}
 						<li>
@@ -105,6 +104,7 @@
       })
 
       $('#login-container').html('<a href="/me" class="button">My Account</a>')
+      reloadUI()
 
     })()
   </script>
