--- a/views/account.mustache
+++ b/views/account.mustache
@@ -89,6 +89,7 @@
 								</div>
 							</div>
 							<div class="buttons-to-right">
+                <a target="_blank" href="https://{{slug}}.vertex360.co" class="button"><i class="sl sl-icon-close"></i> View Site</a>
 								<a href="/admin/pages/{{slug}}" class="button"><i class="sl sl-icon-close"></i> Pages</a>
                 <a href="/admin/cms/{{slug}}" class="button"><i class="sl sl-icon-close"></i> CMS</a>
 							</div>
