make buttons visible

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -77,19 +77,19 @@
 						<li>
 							<div class="list-box-listing">
 								<div class="list-box-listing-img">
-                  <a href="#">
+                  <a target="_blank" href="https://{{slug}}.vertex360.co">
                     <img src="{{image}}=s512-c" alt="Vertex 360 | {{name}}" />
                   </a>
                 </div>
 								<div class="list-box-listing-content">
 									<div class="inner">
-										<h3>{{name}}</h3>
+										<h3><a target="_blank" href="https://{{slug}}.vertex360.co">{{name}}</a></h3>
 										<span>{{template.category}}</span>
 									</div>
 								</div>
 							</div>
-							<div class="buttons-to-right">
-                <a target="_blank" href="https://{{slug}}.vertex360.co" class="button"><i class="sl sl-icon-close"></i> View Site</a>
+							<div class="buttons-to-right" style="bottom:0%;top:unset;opacity:1.0">
+                <a target="_blank" href="https://{{slug}}.vertex360.co" class="button"><i class="sl sl-icon-share-alt"></i> View Site</a>
 								<a href="/admin/pages/{{slug}}" class="button"><i class="sl sl-icon-close"></i> Pages</a>
                 <a href="/admin/cms/{{slug}}" class="button"><i class="sl sl-icon-close"></i> CMS</a>
 							</div>
