--- a/views/account.mustache
+++ b/views/account.mustache
@@ -61,7 +61,7 @@
 
               <div class="col-lg-4">
                 <div class="edit-profile-photo">
-    							<img src="images/user-avatar.jpg" alt="">
+    							<img src="{{user.image}}=s512-c" alt="">
     						</div>
                 <div class="photoUpload">
                     <span><i class="fa fa-upload"></i> Upload Photo</span>
