import dropzone and turbo sdk

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -68,13 +68,7 @@
                     <input type="file" class="upload btn btn-success" />
                 </div>
               </div>
-
-
             </div>
-
-
-
-
 
 						<button id="btn-update-profile" class="button margin-top-15">Update Profile</button>
 					</div>
@@ -120,6 +114,8 @@
 
   <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
   <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
+  <script type="text/javascript" src="{{{cdn}}}/js/dropzone.js"></script>
+  <script type="text/javascript" src="https://cdn.turbo360-dev.com/dist/turbo.min.js"></script>
   <script type="text/javascript">
     (function(){
       Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
