--- a/views/account.mustache
+++ b/views/account.mustache
@@ -61,9 +61,9 @@
 
               <div class="col-lg-4">
                 <div class="edit-profile-photo">
-    							<img src="{{user.image}}=s512-c" alt="">
+    							<img id="profile-image" src="{{user.image}}=s512-c" alt="">
     						</div>
-                <button id="btn-upload" class="button">Upload Photo</button>
+                <button id="btn-upload" class="button">Change Photo</button>
               </div>
             </div>
 
@@ -128,6 +128,12 @@
           apiKey: '16874eb4-417b-4147-9657-18a4a2c8cada',
   				completion: function(err, file){
   					console.log('File Uploaded: ' + JSON.stringify(file))
+            // File Uploaded: {"confirmation":"success",
+            // "result":{"site":"5c244564231ff10015a113ea","name":"mongo-import.png",
+            // "type":"image/png","url":"https://lh3.googleusercontent.com/NEzXrVmiEOrz0ckn37U3nj54sVmtdUGGjoIerWHh6UTd_ndtiiopnABgQxrQ8Lh9_A6SoYds9hDrasCHOM2boCBLadc","size":30826,"timestamp":"2019-01-21T18:24:14.328Z","schema":"blob","id":"5c460e4eac836700155c3b2e"}}
+
+            var imageUrl = file.result.url+'=s512-c'
+            $('#profile-image').attr('src', imageUrl)
   				}
         })
       })
