--- a/views/account.mustache
+++ b/views/account.mustache
@@ -27,8 +27,8 @@
 	<div class="dashboard-nav">
 		<div class="dashboard-nav-inner">
 			<ul data-submenu-title="Account">
-				<li id="list-item-profile"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-settings"></i> Profile</a></li>
-				<li id="list-item-sites"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-envelope-open"></i> Sites</a></li>
+				<li id="list-item-profile"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-user-following"></i> Profile</a></li>
+				<li id="list-item-sites"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-docs"></i> Sites</a></li>
 			</ul>
 		</div>
 	</div>
