updated admin page

--- a/views/admin/page.mustache
+++ b/views/admin/page.mustache
@@ -1,35 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+  <title>Vertex 360 | Professional Websites. Fast.</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
-  <meta name="author" content="Vertext 360">
-  <title>Vertex 360</title>
-
-  <link href="https://cdn.turbo360-dev.com/admin/assets/img/brand/favicon.png" rel="icon" type="image/png">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-
-  <link type="text/css" href="https://cdn.turbo360-dev.com/admin/assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-  <link type="text/css" href="https://cdn.turbo360-dev.com/admin/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link type="text/css" href="https://cdn.turbo360-dev.com/admin/assets/css/argon.css?v=1.0.0" rel="stylesheet">
-
-  <style type="text/css">
-    .page-editor input {
-      margin-left: 44px;
-      width: 100%;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/dist/css/style.min.css">
 </head>
 
 <body>
   <div id="root"></div>
 
   <script type="text/javascript">window.__PRELOADED_STATE__ = {{{pageConfig}}}</script>
-  <script src="https://cdn.turbo360-dev.com/admin/assets/vendor/jquery/dist/jquery.min.js"></script>
-  <script src="https://cdn.turbo360-dev.com/admin/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.turbo360-dev.com/admin/assets/js/argon.js?v=1.0.0"></script>
+  <script type="text/javascript" src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/dist/js/vendor.min.js"></script>
 
 	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/common.js"></script>
 	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/pages.js"></script>
