--- a/views/index.mustache
+++ b/views/index.mustache
@@ -148,7 +148,7 @@
           return
         }
 
-        window.location.href = '/admin/'+siteSlug
+        window.location.href = '/me' // redirect to account page
       })
     }
 
