open cms dashboard in new window

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -92,7 +92,7 @@
 							<div class="buttons-to-right" style="bottom:0%;top:unset;opacity:1.0">
                 <a target="_blank" href="https://{{slug}}.vertex360.co" class="button"><i class="sl sl-icon-share-alt"></i> View Site</a>
 								<a href="/admin/pages/{{slug}}" class="button"><i class="sl sl-icon-close"></i> Pages</a>
-                <a href="/admin/cms/{{slug}}" class="button"><i class="sl sl-icon-close"></i> CMS</a>
+                <a target="_blank" href="/admin/cms/{{slug}}" class="button"><i class="sl sl-icon-close"></i> CMS</a>
 							</div>
 						</li>
             {{/sites}}
