--- a/views/admin/cms.mustache
+++ b/views/admin/cms.mustache
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
-<head><meta http-equiv="content-type" content="text/html; charset=utf-8" /></head>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/dist/css/style.min.css">
+  <style>
+    input {
+      box-shadow: none !important;
+    }
+
+    textarea {
+      box-shadow: none !important;
+      background: #fffffa !important;
+    }
+  </style>
+</head>
 
 <body style="margin:0px">
 	<div id="root"></div>
