redirect to sites page after launching template

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -148,7 +148,7 @@
           return
         }
 
-        window.location.href = '/me' // redirect to account page
+        window.location.href = '/me?selected=sites' // redirect to account page
       })
     }
 
