--- a/views/admin/page.mustache
+++ b/views/admin/page.mustache
@@ -12,7 +12,8 @@
 
     textarea {
       box-shadow: none !important;
-      background: #fffffa !important;
+      background: #f9f9f9 !important;
+      padding: 4px;
     }
   </style>
 </head>
