render template description as html

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -82,7 +82,7 @@
       </li>
     </ul>
     <hr />
-    <p><% description %></p>
+    <p><%{description}%></p>
     <h4 style="margin-top:20px">Screenshots</h4>
     <%#images %>
     <div class="screenshot"><img src="<% . %>" /></div>
