--- a/views/admin/page.mustache
+++ b/views/admin/page.mustache
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/dist/css/style.min.css">
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <style>
     input {
       box-shadow: none !important;
