--- a/views/account.mustache
+++ b/views/account.mustache
@@ -29,6 +29,7 @@
 			<ul data-submenu-title="Account">
 				<li id="list-item-profile"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-user-following"></i> Profile</a></li>
 				<li id="list-item-sites"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-docs"></i> Sites</a></li>
+        <li><a href="/account/logout"><i class="sl sl-icon-docs"></i> Log Out</a></li>
 			</ul>
 		</div>
 	</div>
