--- a/views/partials/auth.mustache
+++ b/views/partials/auth.mustache
@@ -5,8 +5,8 @@
 
   <div class="sign-in-form style-1">
     <ul class="tabs-nav">
-      <li><a href="#tab1">Log In</a></li>
-      <li><a href="#tab2">Register</a></li>
+      <li><a id="tab-login" href="#tab1">Log In</a></li>
+      <li><a id="tab-register" href="#tab2">Register</a></li>
     </ul>
 
     <div class="tabs-container alt">
