--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -26,10 +26,11 @@
   					<ul id="responsive">
   						<li><a class="current" href="/">Home</a></li>
   						<li><a href="#">How It Works</a></li>
+							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
   					</ul>
   				</nav>
           <div id="login-container">
-  					<a id="btn-login" href="#sign-in-dialog" class="button with-icon popup-with-zoom-anim">Log In <i class="sl sl-icon-login" style="padding-left:4px"></i></a>
+  					<a id="btn-login" href="#sign-in-dialog" class="button with-icon popup-with-zoom-anim">JOIN <i class="sl sl-icon-login" style="padding-left:4px"></i></a>
           </div>
 				</div>
 			</div>
