hide login link if logged in

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -259,6 +259,7 @@
     }
     else {
       $('#login-container').html('<a href="/me" class="button">My Account</a>')
+      $('#nav-login').hide()
     }
 
     var reloadUI = function(){
