--- a/views/account.mustache
+++ b/views/account.mustache
@@ -121,6 +121,9 @@
       var selected = data.selected
       var sidebarMenu = ['list-item-profile', 'list-item-sites']
 
+      if (user!=null)
+        $('#nav-login').hide()
+
       var turbo = Turbo({site_id: '5c244564231ff10015a113ea'})
       $('#btn-upload').click(function(event){
         if (user == null)
