add 2 minute warning on site launch indicator

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -178,7 +178,7 @@
         return
       }
 
-      $('#btn-launch-container').html("<img style='width:100px' src='https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif' /><br /><em>Launching your site...</em>")
+      $('#btn-launch-container').html("<img style='width:100px' src='https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif' /><br /><em>Launching your site. This may take up to 2 minutes...</em>")
       postRequest('/account/launch-template', body, function(err, response){
         if (err){
           alert('Error: ' + err.message)
