--- a/views/admin/cms.mustache
+++ b/views/admin/cms.mustache
@@ -18,7 +18,7 @@
 <body style="margin:0px">
 	<div id="root"></div>
 
-  <script type="text/javascript">window.__PRELOADED_STATE__ = {{{site}}}</script>
+  <script type="text/javascript">window.__PRELOADED_STATE__ = {{{data}}}</script>
 	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/common.js"></script>
 	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/cms.js"></script>
 </body>
