--- a/views/admin/cms.mustache
+++ b/views/admin/cms.mustache
@@ -2,6 +2,7 @@
 <html dir="ltr" lang="en-US">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/dist/css/style.min.css">
   <style>
     input {
