--- a/views/index.mustache
+++ b/views/index.mustache
@@ -32,7 +32,7 @@
   						<a href="#" class="listing-item template-preview" id="{{index}}">
 
   							<div class="listing-item-image">
-  								<img src="{{image}}=s360" alt="">
+  								<img src="{{image}}=s640" alt="Vertex 360">
   							</div>
 
   							<div class="listing-item-content">
