--- a/views/index.mustache
+++ b/views/index.mustache
@@ -70,33 +70,34 @@
 <!-- Wrapper / End -->
 
 <script type="text/template" id="tpl-selected-template">
-  <div class="post-content selected-template">
+  <div class="selected-template">
     <img src="<% image %>=s1024" alt="Vertex 360">
-    <h3><a class="capitalize" href="#"><% name %></a></h3>
-    <ul class="post-meta">
-      <li class="capitalize"><% template.category %></li>
-      <li class="capitalize">Free</li>
-      <li>
-        <a target="_blank" href="https://<% slug %>.vertex360.co" style="color:#37b6bd;">Example</a>
-        <i class="sl sl-icon-share-alt" style="padding-left:4px;color:#37b6bd;"></i>
-      </li>
-    </ul>
-    <hr />
-    <p><%{description}%></p>
-    <h4 style="margin-top:20px">Screenshots</h4>
-    <%#images %>
-    <div class="screenshot"><img src="<% . %>" /></div>
-    <%/images %>
+    <div class="post-content">
+      <h3><a class="capitalize" href="#"><% name %></a></h3>
+      <ul class="post-meta">
+        <li class="capitalize"><% template.category %></li>
+        <li class="capitalize">Free</li>
+        <li>
+          <a target="_blank" href="https://<% slug %>.vertex360.co" style="color:#37b6bd;">Example</a>
+          <i class="sl sl-icon-share-alt" style="padding-left:4px;color:#37b6bd;"></i>
+        </li>
+      </ul>
+      <hr />
+      <p><%{description}%></p>
+      <h4 style="margin-top:20px">Screenshots</h4>
+      <%#images %>
+      <div class="screenshot"><img src="<% . %>" /></div>
+      <%/images %>
 
-    <hr />
-    <p style="margin-bottom:16px">Launch this template on your account.</p>
-    <div id="launch-template-container" style="width:50%">
-      <input id="input-site-name" type="text" placeholder="Your Site Name" />
-      <div id="btn-launch-container">
-        <a style="margin-top:4px" id="btn-clone-template" href="#" class="button with-icon">Use This Template <i class="fa fa-angle-right"></i></a>
+      <hr />
+      <p style="margin-bottom:16px">Launch this template on your account.</p>
+      <div id="launch-template-container" style="width:50%">
+        <input id="input-site-name" type="text" placeholder="Your Site Name" />
+        <div id="btn-launch-container">
+          <a style="margin-top:4px" id="btn-clone-template" href="#" class="button with-icon">Use This Template <i class="fa fa-angle-right"></i></a>
+        </div>
       </div>
     </div>
-
   </div>
 </script>
 
