template tag class

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -2,7 +2,7 @@
 <head>
   {{>head}}
   <style>
-    .tag {
+    .template-tag {
       background: #f9f9f9;
       padding: 1px 4px;
       line-height: 16px;
@@ -51,7 +51,7 @@
   									<h3>{{name}}</h3>
   									<span>{{template.category}}</span>
                     <div class="profile-row">
-                      {{#tags}}<span class="tag">{{.}}</span>{{/tags}}
+                      {{#tags}}<span class="template-tag">{{.}}</span>{{/tags}}
   									</div>
   								</div>
 
