--- a/views/index.mustache
+++ b/views/index.mustache
@@ -9,6 +9,7 @@
       border-radius: 4px;
       border: 1px solid #ededed;
       font-size: 10px;
+      margin-right: 4px;
     }
   </style>
 </head>
