--- a/views/index.mustache
+++ b/views/index.mustache
@@ -48,7 +48,7 @@
 
   							<div class="listing-item-content">
 
-  								<div class="listing-item-inner" style="padding-right:0px">
+  								<div class="listing-item-inner" style="padding-right:0px;left:20px">
   									<h3>{{name}}</h3>
   									<span>{{template.category}}</span>
                     <div class="profile-row">
