--- a/views/index.mustache
+++ b/views/index.mustache
@@ -8,8 +8,9 @@
       line-height: 16px;
       border-radius: 4px;
       border: 1px solid #ededed;
-      font-size: 10px;
+      font-size: 10px !important;
       margin-right: 4px;
+      text-transform: lowercase;
     }
   </style>
 </head>
