--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -25,7 +25,7 @@
           <nav id="navigation" class="style-1">
   					<ul id="responsive">
   						<li><a class="current" href="/">Home</a></li>
-  						<li><a href="#">How It Works</a></li>
+  						<li><a id="nav-how-it-works" href="#">How It Works</a></li>
 							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
   					</ul>
   				</nav>
