logged in class

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -9,6 +9,10 @@
     .my-profile textarea {
       max-height: 120px;
     }
+
+    .right-side-loggedin {
+      width: 30%;
+    }
   </style>
 </head>
 
