--- a/views/admin/page.mustache
+++ b/views/admin/page.mustache
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/dist/js/vendor.min.js"></script>
 
 	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/common.js"></script>
-	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/pages.js"></script>
+	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/site.js"></script>
 </body>
 
 </html>
