how it works detail text

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -82,19 +82,17 @@
 
 <script type="text/template" id="tpl-how-it-works">
   <div>
-    <img src="/images/blog-post-02.jpg" alt="">
-
+    <img src="/images/blog-post-02.jpg" alt="Vertex 360">
   	<div class="post-content">
-  		<h3><a href="#">The 50 Greatest Street Arts In London</a></h3>
-
+  		<h3><a href="#">Make a Website in Minutes</a></h3>
   		<ul class="post-meta">
-  			<li>August 18, 2017</li>
-  			<li><a href="#">Tips</a></li>
-  			<li><a href="#">7 Comments</a></li>
+  			<li>No Coding Required</li>
+        <li>FREE to start</li>
   		</ul>
 
-  		<p>Nam nisl lacus, dignissim ac tristique ut, scelerisque eu massa. Vestibulum ligula nunc, rutrum in malesuada vitae, tempus sed augue. Curabitur quis lectus quis augue dapibus facilisis.</p>
-  		<a href="3" class="read-more">Read More <i class="fa fa-angle-right"></i></a>
+  		<p>
+        Nam nisl lacus, dignissim ac tristique ut, scelerisque eu massa. Vestibulum ligula nunc, rutrum in malesuada vitae, tempus sed augue. Curabitur quis lectus quis augue dapibus facilisis.
+      </p>
   	</div>
   </div>
 </script>
