--- a/views/partials/auth.mustache
+++ b/views/partials/auth.mustache
@@ -3,7 +3,7 @@
     <img style="max-width:180px" src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-3.svg" />
   </div>
 
-  <div class="sign-in-form style-1">
+  <div id="modal-container" class="sign-in-form style-1">
     <ul class="tabs-nav">
       <li><a id="tab-login" href="#tab1">Log In</a></li>
       <li><a id="tab-register" href="#tab2">Register</a></li>
