--- a/views/index.mustache
+++ b/views/index.mustache
@@ -83,7 +83,7 @@
 <script type="text/template" id="tpl-launch-template">
   <div style="text-align:center">
     <h3 style="margin-bottom:20px">Launch Site</h3>
-    <p style="margin-bottom:16px">Launch this template on your account.</p>
+    <p style="margin-bottom:16px;color:#888">Launch this template on your account.</p>
     <input id="input-site-name" type="text" placeholder="Your Site Name" />
     <div id="btn-launch-container">
       <a style="margin-top:4px;width:100%" id="btn-clone-template" href="#" class="button with-icon">Launch This Template <i class="fa fa-angle-right"></i></a>
