--- a/views/index.mustache
+++ b/views/index.mustache
@@ -214,7 +214,7 @@
         return
       }
 
-      $('#btn-launch-container').html("<img style='width:100px' src='https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif' /><br /><em style="color:#888">Launching your site. This may take up to 2 minutes...</em>")
+      $('#btn-launch-container').html("<img style='width:100px' src='https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif' /><br /><em style='color:#888'>Launching your site. This may take up to 2 minutes...</em>")
       postRequest('/account/launch-template', body, function(err, response){
         if (err){
           alert('Error: ' + err.message)
