test modal button

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -73,6 +73,7 @@
 	</div>
 	<div id="selected-template-container" class="fs-inner-container map-fixed" style="overflow:scroll">
     <div id="selected-template" class="blog-post" style="margin-top:0px"></div>
+    <a style="" id="btn-show-modal" href="#sign-in-dialog" class="popup-with-zoom-anim">test</a>
 	</div>
 </div>
 
