--- a/views/account.mustache
+++ b/views/account.mustache
@@ -68,6 +68,7 @@
               </div>
             </div>
 
+            <a href="#sign-in-dialog" class="button popup-with-zoom-anim">Change Password</a>
 						<button id="btn-update-profile" class="button margin-top-15">Update Profile</button>
 					</div>
 				</div>
@@ -105,6 +106,12 @@
 		</div>
 	</div>
 
+</div>
+
+<div id="sign-in-dialog" class="zoom-anim-dialog mfp-hide" style="background:#fffffa">
+  <div class="small-dialog-header">
+    <img style="max-width:180px" src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-3.svg" />
+  </div>
 </div>
 
 </div>
